fixed x-overflow issues

--- a/css/styles.css
+++ b/css/styles.css
@@ -7,6 +7,7 @@ html,body {
     background-size: cover;
     color:#444;
     font-family: 'Lato', sans-serif;
+    overflow-x:hidden;
 }
 
 @media (min-width:768px) {
